The virtualmin configuration check now ensures that the system has at least 256 MB of real (non-burstable) memory, and displays a warning if total memory is too low.
Updated the modify-php-ini API command to set variables in the Apache configuration as well.
Secondary mail servers running Sendmail and Postfix will now receive the list of allowed addresses for all domains from the master Virtualmin system, to prevent backscatter spam.
---- Changes since 3.87 ----
Updated the PiWik script installer to version 1.5.1, phpBB to 3.0.9, WordPress to 3.2.1, Joomla to 1.6.6 and 1.7.0, SugarCRM to 6.2.2, phpMyAdmin to 3.4.4, Mantis to 1.2.8, Drupal to 7.8, Horde Webmail to 1.2.10, Horde to 3.3.12, ZenPhoto to 1.4.1.3, Moodle to 2.1.1, LimeSurvey to 1.91, RoundCube to 0.6-rc, PHPList to 2.10.15, WebCalendar to 1.2.4, eGroupWare to 1.8.002.20110811, PHP-Nuke to 8.2.4, Magento to 1.6.0.0, TWiki to 5.1.0, Mantis to 1.2.7, CMS Made Simple to 1.9.4.3, Instiki to 0.19.3, i-Dreams to 6.0, Zikula to 1.2.8, Django to 1.3.1, and Dolibarr to 3.0.1.
When a virtual server is disabled, any cron jobs run by its owner or mailbox users are also disabled.
An IPv6 address that is already active can now be used when creating a virtual server.
Checking for new script updates is now enabled by default on new installs and upgrades, unless explicitly disabled by root.
Added a tab to the Validate Virtual Servers page for fixing file ownership and permissions problems.
Storage of plaintext passwords for virtual servers and mailboxes can now be disabled on a per-template basis. Virtualmin will instead store only hashed passwords in multiple formats, which prevents passwords from being compromised if the system is hacked. Thanks to Dirk Ertner for supporting this feature.
---- Changes since 3.88 ----
Updated the phpMyAdmin script installer to version 3.4.5, SMF to 2.0.1, and PHPList to 2.10.16.