@@ -375,7 +375,8 @@ setup_eftp=A ProFTPd virtual server with the same IP address already exists
 setup_emysql=A MySQL database called $2 or user called $3 already exists
 setup_emysqldb=A MySQL database named $1 already exists
 setup_emysqluser=A MySQL user named $1 already exists - try selecting a different administration username
-setup_epostgres=A PostgreSQL database called $2 or user called $3 already exists
+setup_epostgresdb=A PostgreSQL database called $1 already exists
+setup_epostgresuser=A PostgreSQL user called $1 already exists
 setup_ehomebase=Home directory base is not set in the configuration of the Users and Groups module or this module
 setup_equota=Missing or invalid total quota
 setup_euquota=Missing or invalid administration user's quota
@@ -505,6 +506,7 @@ setup_ednssecsize=.. could not compute key size : $1
 setup_ednsseckey=.. key generation failed : $1
 setup_ednssecsign=.. records signing failed : $1
 setup_mysqldb=Creating MySQL database $1 ..
+setup_mysqldbimport=Importing MySQL database $1 ..
 setup_mysqldb_provision=Creating MySQL database $1 on services host ..
 setup_emysqldb_provision=.. creation error : $1
 setup_mysqluser=Creating MySQL login ..
@@ -514,6 +516,7 @@ setup_emysqluser_provclash=.. this system is configured to use the remote MySQL 
 setup_mysqluser_provisioned=.. created on $1
 setup_mysqldb_provisioned=.. created on $1
 setup_postgresdb=Creating PostgreSQL database $1 ..
+setup_postgresdbimport=Importing PostgreSQL database $1 ..
 setup_postgresuser=Creating PostgreSQL login ..
 setup_webmin=Creating Webmin user ..
 setup_webminpid=Re-starting Webmin ..
@@ -2296,6 +2299,7 @@ restore_create=Server does not exist, will be re-created
 restore_nocreate=Server does not exist, but you are not allowed to re-create it
 restore_norestore=You do not have permissions to restore this server
 restore_now2=Restore Now
+restore_wskip=Ignore virtual server creation warnings?
 restore_nofeat=No selected features in backup
 restore_novirt=No selected Virtualmin settings in backup
 restore_dovirtualmin=Virtualmin configuration settings
@@ -2315,6 +2319,7 @@ restore_etemplate=.. the server template specified in the backup does not exist
 restore_eresel=.. the reseller $1 specified in the backup does not exist
 restore_edefip=.. could not work out the default IP address
 restore_eclash=.. a clash was detected : $1
+restore_ewarnings=.. the following warnings were detected :
 restore_fordomain=Restoring backup for virtual server $1 ..
 restore_download=Downloading archive from FTP server ..
 restore_downloadssh=Downloading archive from SSH server ..
