@@ -1313,3 +1313,4 @@ Added a tab to the Validate Virtual Servers page for fixing file ownership and p
 Storage of plaintext passwords for virtual servers and mailboxes can now be disabled on a per-template basis. Virtualmin will instead store only hashed passwords in multiple formats, which prevents passwords from being compromised if the system is hacked. Thanks to Dirk Ertner for supporting this feature.
 ---- Changes since 3.88 ----
 Updated the phpMyAdmin script installer to version 3.4.5, SMF to 2.0.1, and PHPList to 2.10.16.
+When creating or restoring a virtual server with a database that already exists, you now have the option to simply associate that database with the server rather than causing the server creation to fail.
